--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
